implémentation de la suppression d'un comment
